2006/12/30
.added parent attribute to CObject and its children
.adjusted the constructor of CDomainType to support allowAny
.removed obsolete CDomainType concrete classes in the AOM package

2006/12/16
.added convenient factory methods in ExpressionLeaf
.added STRING as constant type in ExpressionItem