@@ -59,7 +59,12 @@
 	<dependencies>		
 		<dependency>
 			<groupId>openehr</groupId>
-			<artifactId>openehr-rm</artifactId>
+			<artifactId>openehr-rm-core</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>openehr</groupId>
+			<artifactId>openehr-rm-domain</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
